# invicoDB

./: .gitignore  INVICOModular.R  README.md  fct_invico_import.R  pyproject.toml  requirements.txt  setup.py  update_db.py
src/invicodb/: download_update_upload.py  hangling_path.py  update_db.py  upload_db.py
src/invicodb/app/: app.py  default_widgets_setup.py  invicodb_app.py  main_window_fct.py  main_window_ui.py  widget_setup.py
src/invicodb/download/: __init__.py  download_db.py
src/invicodb/update/: update_db.py
src/invicodb/upload/: upload_db.py
